--- a/YourDataStore/pom.xml
+++ b/YourDataStore/pom.xml
@@ -21,6 +21,28 @@
 		<scope>system</scope>
 		<systemPath>${basedir}/lib/log4j-1.2.17.jar</systemPath>
   </dependency>
+  		<dependency>
+			<groupId>com.turn</groupId>
+			<artifactId>ttorrent-core</artifactId>
+			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.21</version>
+		</dependency>
+		    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
+        <version>1.7.0</version>
+        <scope>runtime</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>1.7.0</version>
+        <scope>runtime</scope>
+    </dependency>
   </dependencies>
   
   <build>
